# Trivial-STL-Cpp2a

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build_and_run.sh
cmake/: check-compiler-spec.cmake
extstl/: concepts.h  tuple.h  utility.h
include/: concepts.h  tuple.h  type_traits.h  utility.h  variant.h
src/: CMakeLists.txt
tests/: CMakeLists.txt  concepts.test.cpp  tuple.cpp  tuple.test.cpp  utility.cpp  utility.test.cpp  variant.test.cpp
trivstl/: tuple.h  type_traits.h
